Fix alignment issues with elements in nav bar for all screen resolutions

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -120,6 +120,11 @@ nav {
   padding-top: 6px;
 }
 
+.actions {
+  display: grid;
+  grid-template-columns: 40% 40% 20%;
+}
+
 .menu-list a {
   font-weight: bold;
 }
